se trabaja en responsive de página

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="header-nav">
             <img src="./img/utn-logo.png" alt="logo de coca cola" class="nav-logo">
             <h1 class="title-nav">Control de calidad de linea de producción</h1>
         </nav>
@@ -37,6 +37,11 @@
             </picture>
         </div>
     </main>
+    <footer>
+        <div class="">
+            <img src="./img/utn-footer.jpg" class="img-footer">
+        </div>
+    </footer>
 <script src="./main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
