--- a/index.html
+++ b/index.html
@@ -1,45 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Proyecto final "Ingeniería Electrónica</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+    <title>|| HOME ||</title>
 </head>
 <body>
     <header>
         <nav class="header-nav">
-            <img src="./img/utn-logo.png" alt="logo de coca cola" class="nav-logo">
-            <h2 class="title-nav">Control de calidad de linea de producción</h2>
+            <div>
+                <img src="./img/utn-logo.png" alt="logo de UTN FRSN" class="nav-logo">
+            </div>  
         </nav>
     </header>
     <main>
-        <div class="div-info">
-            <h1 class="div-h1">Histórico botellas defectuosas</h1>
-            <div class="div-btn">
-                <button type="button" class="button1" id="stop-btn">Detener</button>
-                <button type="button" class="button2" id="cont-btn">Continuar</button>
+        <div class="container">
+            <div class="div-button">
+                <div>
+                    <h4 class="title">Proyecto Final Ingeniería Electrónica   |   Sistema de Inspección por Visión Artificial</h4>
+                </div>
+                <div class="div-link">
+                    <a class="link1" href="./">Logout</a>
+                    <a class="link2" href="./historico.html" target="_blank">Históricos</a>
+                </div>
+                    
             </div>
-
+            <div class="div-container">
+                <div class="img-flex">
+                    <img id="data-img" src="./img/coca2.png" class="data-img">
+                    <h5 class="h5-subtitle">COGNEX INSIGHT CAMERA</h5>
+                    <!-- <img id="data-img" src="/image?time=1"> -->
+                </div>
+                <div class="flex-container">
+                    <div class="div-info-flex">
+                        <p class="data-raw2" id="data-raw2"> </p>
+                        <p id="comunicacion" ></p>
+                        <p id="flay" ></p>
+                    </div>
+                    <div class="div-info-flex">
+                        <p class="data-raw" id="data-raw"> </p>
+                    </div>
+                    <div class="div-info-flex">
+                        <h5>Presencia de patrón:</h5>
+                        <p id="resultadotapa"> </p>
+                        <p id="cuentastapa"> </p>
+                    </div>
+                    <div class="div-info-flex">
+                        <h5>Ausencia de patrón:</h5>
+                        <p id="resultadonotapa"> </p>
+                        <p id="cuentasnotapa"> </p>                        
+                    </div>
+                    <div class="div-info-flex">
+                        <h5>Información extra de la captura:</h5>
+                        <p id="botellashora"></p>
+                        <p id="fecha"></p>
+                        <p id="hora"></p>
+                    </div>
+                </div>  
+            </div>
         </div>
-        <div class="div-flex-container" id="container-img"></div>
-        <div class="err" id="container-err"></div>
+        <footer>
+            <div class="">
+                <p class="p-footer"> alumnos: Cestari, Juan Diego | Palazzi, Matias</p>
+                <img src="./img/utn-footer.jpg" class="img-footer">
+            </div>
+        </footer>
     </main>
-    <footer>
-        <div class="">
-            <img src="./img/utn-footer.jpg" class="img-footer">
-        </div>
-    </footer>
-<script src="./main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+    
 </body>
 </html>
